Refactor to use new concurrency model